--- a/Matematikk SR boka.ipynb
+++ b/Matematikk SR boka.ipynb
@@ -1725,14 +1725,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a68f1870-bb5c-4cc1-b632-63151c397011",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "id": "34663d94-8efc-4b7f-aefa-b446c82364d7",
    "metadata": {},
@@ -2064,11 +2056,432 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e482ab53-d2bb-498e-956b-53b3d1a49dfd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Enhetskonvertering og beregninger\n",
+      "1. Konverter en verdi med prefiks\n",
+      "2. Konverter tid\n",
+      "3. Avslutt\n",
+      "4. Fart og sammensatte enheter\n",
+      "5. Tetthet og medisinens styrke\n",
+      "6. Fysiske formler og enhetsberegninger\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Velg et alternativ (1-6):  6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Del 6: Fysiske formler\n",
+      "1. Fart, strekning, tid (v = s/t)\n",
+      "2. Masse = tetthet * volum\n",
+      "3. Volumkonvertering (liter <-> m³)\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Velg et alternativ:  1\n",
+      "Strekning (m) eller Enter:  1000\n",
+      "Fart (m/s) eller Enter:  \n",
+      "Tid (s) eller Enter:  3600\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fart = 0.28 m/s\n",
+      "\n",
+      "Enhetskonvertering og beregninger\n",
+      "1. Konverter en verdi med prefiks\n",
+      "2. Konverter tid\n",
+      "3. Avslutt\n",
+      "4. Fart og sammensatte enheter\n",
+      "5. Tetthet og medisinens styrke\n",
+      "6. Fysiske formler og enhetsberegninger\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Velg et alternativ (1-6):  3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avslutter programmet.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3 Formler: 3.3 Enheter. Ordbok for prefikser og deres verdier. \n",
+    "# Ordbok for prefikser med symbol, verdi og navn\n",
+    "import re\n",
+    "\n",
+    "prefixes = {\n",
+    "    'T': {'value': 1_000_000_000_000, 'name': 'tera'},\n",
+    "    'G': {'value': 1_000_000_000, 'name': 'giga'},\n",
+    "    'M': {'value': 1_000_000, 'name': 'mega'},\n",
+    "    'k': {'value': 1_000, 'name': 'kilo'},\n",
+    "    'h': {'value': 100, 'name': 'hekto'},\n",
+    "    'd': {'value': 0.1, 'name': 'desi'},\n",
+    "    'c': {'value': 0.01, 'name': 'centi'},\n",
+    "    'm': {'value': 0.001, 'name': 'milli'},\n",
+    "    'μ': {'value': 0.000001, 'name': 'mikro'},\n",
+    "    'n': {'value': 0.000000001, 'name': 'nano'}\n",
+    "}\n",
+    "\n",
+    "# Tid i sekunder\n",
+    "time_units = {\n",
+    "    's': 1,\n",
+    "    'min': 60,\n",
+    "    'h': 3600,\n",
+    "    'd': 86400,\n",
+    "    'y': 31536000\n",
+    "}\n",
+    "\n",
+    "# Lengde i meter\n",
+    "length_units = {\n",
+    "    'm': 1,\n",
+    "    'km': 1000,\n",
+    "    'dm': 0.1,\n",
+    "    'cm': 0.01,\n",
+    "    'mm': 0.001\n",
+    "}\n",
+    "\n",
+    "# Volum i m³\n",
+    "volume_units = {\n",
+    "    'm³': 1,\n",
+    "    'dm³': 0.001,\n",
+    "    'cm³': 0.000001,\n",
+    "    'liter': 0.001,\n",
+    "    'ml': 0.000001\n",
+    "}\n",
+    "\n",
+    "# Masse i kg\n",
+    "mass_units = {\n",
+    "    'kg': 1,\n",
+    "    'g': 0.001,\n",
+    "    'mg': 0.000001\n",
+    "}\n",
+    "\n",
+    "# Energi i joule (J)\n",
+    "energy_units = {\n",
+    "    'J': 1,\n",
+    "    'kJ': 1000,\n",
+    "    'MJ': 1_000_000,\n",
+    "    'Wh': 3600,\n",
+    "    'kWh': 3_600_000\n",
+    "}\n",
+    "\n",
+    "# Hastighet (valgfri)\n",
+    "speed_units = {\n",
+    "    'm/s': 1,\n",
+    "    'km/h': 1000/3600,\n",
+    "    'knop': 1852/3600\n",
+    "}\n",
+    "\n",
+    "def parse_value_unit(input_str):\n",
+    "    \"\"\"\n",
+    "    Tolker en verdi med prefiks og enhet.\n",
+    "    Eksempel: '1.5 km', '200 mg', '3.2 L'\n",
+    "    Returnerer verdi i SI-enhet og selve enheten.\n",
+    "    \"\"\"\n",
+    "    input_str = input_str.strip().replace(',', '.')  # tillat komma som desimal\n",
+    "    # Mønster for verdi + prefiks + enhet\n",
+    "    pattern = r\"^([\\d.]+)\\s*([TGMkhdcμmn]?)([a-zA-Z³²/]+)$\"\n",
+    "    match = re.match(pattern, input_str)\n",
+    "    if not match:\n",
+    "        raise ValueError(f\"Ugyldig format: {input_str}\")\n",
+    "    value = float(match.group(1))\n",
+    "    prefix = match.group(2)\n",
+    "    unit = match.group(3)\n",
+    "\n",
+    "    prefix_factor = prefixes.get(prefix, {'value': 1})['value']\n",
+    "\n",
+    "    # Her må vi finne hva slags type enhet det er for korrekt konvertering:\n",
+    "    if unit in length_units:\n",
+    "        base_value = value * prefix_factor * length_units[unit]\n",
+    "        base_unit = 'm'\n",
+    "    elif unit in volume_units:\n",
+    "        base_value = value * prefix_factor * volume_units[unit]\n",
+    "        base_unit = 'm³'\n",
+    "    elif unit in mass_units:\n",
+    "        base_value = value * prefix_factor * mass_units[unit]\n",
+    "        base_unit = 'kg'\n",
+    "    elif unit in time_units:\n",
+    "        base_value = value * prefix_factor * time_units[unit]\n",
+    "        base_unit = 's'\n",
+    "    elif unit in energy_units:\n",
+    "        base_value = value * prefix_factor * energy_units[unit]\n",
+    "        base_unit = 'J'\n",
+    "    elif unit in speed_units:\n",
+    "        base_value = value * prefix_factor * speed_units[unit]\n",
+    "        base_unit = 'm/s'\n",
+    "    else:\n",
+    "        # Ikke støttet enhet, men la den stå som er\n",
+    "        base_value = value * prefix_factor\n",
+    "        base_unit = unit\n",
+    "\n",
+    "    return base_value, base_unit\n",
+    "\n",
+    "def convert_to_unit(value_si, target_unit):\n",
+    "    \"\"\"\n",
+    "    Konverterer en verdi i SI-enhet til ønsket enhet.\n",
+    "    Må vite type enhet for å finne riktig konverteringsfaktor.\n",
+    "    \"\"\"\n",
+    "    # Finn hvilken kategori target_unit tilhører:\n",
+    "    if target_unit in length_units:\n",
+    "        return value_si / length_units[target_unit], target_unit\n",
+    "    elif target_unit in volume_units:\n",
+    "        return value_si / volume_units[target_unit], target_unit\n",
+    "    elif target_unit in mass_units:\n",
+    "        return value_si / mass_units[target_unit], target_unit\n",
+    "    elif target_unit in time_units:\n",
+    "        return value_si / time_units[target_unit], target_unit\n",
+    "    elif target_unit in energy_units:\n",
+    "        return value_si / energy_units[target_unit], target_unit\n",
+    "    elif target_unit in speed_units:\n",
+    "        return value_si / speed_units[target_unit], target_unit\n",
+    "    else:\n",
+    "        raise ValueError(f\"Ukjent målenhet: {target_unit}\")\n",
+    "\n",
+    "def input_value_with_unit(prompt):\n",
+    "    while True:\n",
+    "        try:\n",
+    "            val, unit = parse_value_unit(input(prompt))\n",
+    "            return val, unit\n",
+    "        except Exception as e:\n",
+    "            print(\"Feil:\", e, \"- prøv igjen. (F.eks. 1.5 km, 200 mg)\")\n",
+    "\n",
+    "# Del 4 funksjoner for fart, utslipp og konvertering\n",
+    "\n",
+    "def diesel_forbruk_km_per_liter(l_per_mil):\n",
+    "    # L/mil → km/l\n",
+    "    return 10 / l_per_mil\n",
+    "\n",
+    "def co2_utslipp_per_liter(km_per_liter, gram_per_km):\n",
+    "    total_gram = km_per_liter * gram_per_km\n",
+    "    return total_gram / 1000  # kg\n",
+    "\n",
+    "def knop_til_kmh(knop):\n",
+    "    return knop * 1.852\n",
+    "\n",
+    "def kmh_til_knop(kmh):\n",
+    "    return kmh / 1.852\n",
+    "\n",
+    "# Del 5 - Medisinsk doseutregning\n",
+    "\n",
+    "def medisinsk_dose(masse_kg, dose_mg_per_kg):\n",
+    "    \"\"\"\n",
+    "    Regner total dose i mg gitt kroppsmasse og dose per kg\n",
+    "    \"\"\"\n",
+    "    return masse_kg * dose_mg_per_kg\n",
+    "\n",
+    "# Formler for fart, tid og strekning\n",
+    "\n",
+    "def regn_ut_fart(s=None, t=None, v=None):\n",
+    "    # Alle i SI: s (m), t (s), v (m/s)\n",
+    "    if v is None and s is not None and t is not None:\n",
+    "        if t == 0:\n",
+    "            raise ValueError(\"Tid kan ikke være null.\")\n",
+    "        return s / t\n",
+    "    elif s is None and v is not None and t is not None:\n",
+    "        return v * t\n",
+    "    elif t is None and s is not None and v is not None:\n",
+    "        if v == 0:\n",
+    "            raise ValueError(\"Fart kan ikke være null.\")\n",
+    "        return s / v\n",
+    "    else:\n",
+    "        raise ValueError(\"Nøyaktig én variabel må være None for å regne ut.\")\n",
+    "\n",
+    "# Formler for masse, volum og tetthet\n",
+    "\n",
+    "def regn_ut_tetthet(m=None, v=None, d=None):\n",
+    "    # Tetthet = masse / volum (kg/m³)\n",
+    "    if d is None and m is not None and v is not None:\n",
+    "        if v == 0:\n",
+    "            raise ValueError(\"Volum kan ikke være null.\")\n",
+    "        return m / v\n",
+    "    elif m is None and d is not None and v is not None:\n",
+    "        return d * v\n",
+    "    elif v is None and m is not None and d is not None:\n",
+    "        if d == 0:\n",
+    "            raise ValueError(\"Tetthet kan ikke være null.\")\n",
+    "        return m / d\n",
+    "    else:\n",
+    "        raise ValueError(\"Nøyaktig én variabel må være None for å regne ut.\")\n",
+    "\n",
+    "# Hovedmeny Del 6 - Fysiske formler med enheter\n",
+    "\n",
+    "def del_6_meny():\n",
+    "    print(\"\\nDel 6: Fysiske formler og enhetsberegninger\")\n",
+    "    print(\"1. Regn ut fart (s, t, v)\")\n",
+    "    print(\"2. Regn ut tetthet (m, v, d)\")\n",
+    "    valg = input(\"Velg et alternativ (1-2): \")\n",
+    "\n",
+    "    if valg == '1':\n",
+    "        print(\"Oppgi to av tre variabler (strekning, tid, fart). Bruk enheter. (F.eks. '10 km', '30 min')\")\n",
+    "        s_val, s_unit = input_value_with_unit(\"Strekning: \")\n",
+    "        t_val, t_unit = input_value_with_unit(\"Tid: \")\n",
+    "        v_val, v_unit = input_value_with_unit(\"Fart: \")\n",
+    "        # Finn hvilken som er None (bruk verdi 0 eller -1 som tomt)\n",
+    "        # Vi krever at bruker skriver \"0 enhet\" eller \"0\" hvis ukjent\n",
+    "        inputs = {'s': s_val if s_val > 0 else None,\n",
+    "                  't': t_val if t_val > 0 else None,\n",
+    "                  'v': v_val if v_val > 0 else None}\n",
+    "\n",
+    "        try:\n",
+    "            if inputs['v'] is None:\n",
+    "                v = regn_ut_fart(s=inputs['s'], t=inputs['t'], v=None)\n",
+    "                # Konverter fart til ønsket enhet (la bruker velge)\n",
+    "                v_out, v_unit_out = convert_to_unit(v, 'm/s')\n",
+    "                print(f\"Fart: {v:.3f} m/s\")\n",
+    "            elif inputs['s'] is None:\n",
+    "                s = regn_ut_fart(s=None, t=inputs['t'], v=inputs['v'])\n",
+    "                print(f\"Strekning: {s:.3f} m\")\n",
+    "            elif inputs['t'] is None:\n",
+    "                t = regn_ut_fart(s=inputs['s'], t=None, v=inputs['v'])\n",
+    "                print(f\"Tid: {t:.3f} sekunder\")\n",
+    "            else:\n",
+    "                print(\"Skriv 0 for ukjent variabel.\")\n",
+    "        except Exception as e:\n",
+    "            print(\"Feil:\", e)\n",
+    "\n",
+    "    elif valg == '2':\n",
+    "        print(\"Oppgi to av tre variabler (masse, volum, tetthet). Bruk enheter.\")\n",
+    "        m_val, m_unit = input_value_with_unit(\"Masse: \")\n",
+    "        v_val, v_unit = input_value_with_unit(\"Volum: \")\n",
+    "        d_val, d_unit = input_value_with_unit(\"Tetthet: \")\n",
+    "        inputs = {'m': m_val if m_val > 0 else None,\n",
+    "                  'v': v_val if v_val > 0 else None,\n",
+    "                  'd': d_val if d_val > 0 else None}\n",
+    "\n",
+    "        try:\n",
+    "            if inputs['d'] is None:\n",
+    "                d = regn_ut_tetthet(m=inputs['m'], v=inputs['v'], d=None)\n",
+    "                print(f\"Tetthet: {d:.3f} kg/m³\")\n",
+    "            elif inputs['m'] is None:\n",
+    "                m = regn_ut_tetthet(m=None, v=inputs['v'], d=inputs['d'])\n",
+    "                print(f\"Masse: {m:.3f} kg\")\n",
+    "            elif inputs['v'] is None:\n",
+    "                v = regn_ut_tetthet(m=inputs['m'], v=None, d=inputs['d'])\n",
+    "                print(f\"Volum: {v:.6f} m³\")\n",
+    "            else:\n",
+    "                print(\"Skriv 0 for ukjent variabel.\")\n",
+    "        except Exception as e:\n",
+    "            print(\"Feil:\", e)\n",
+    "    else:\n",
+    "        print(\"Ugyldig valg.\")\n",
+    "\n",
+    "# Menyer del 1-5\n",
+    "\n",
+    "def del_1_meny():\n",
+    "    print(\"\\nDel 1: Konverter en verdi med prefiks\")\n",
+    "    val, unit = input_value_with_unit(\"Skriv verdi med enhet (f.eks. '1.5 km'): \")\n",
+    "    target_unit = input(\"Til enhet (f.eks. m, cm, liter): \").strip()\n",
+    "    try:\n",
+    "        result, res_unit = convert_to_unit(val, target_unit)\n",
+    "        print(f\"{val} {unit} = {result:.6f} {res_unit}\")\n",
+    "    except Exception as e:\n",
+    "        print(\"Feil:\", e)\n",
+    "\n",
+    "def del_2_meny():\n",
+    "    print(\"\\nDel 2: Konverter tid\")\n",
+    "    val, unit = input_value_with_unit(\"Skriv tid med enhet (f.eks. '2 h'): \")\n",
+    "    target_unit = input(\"Til tidsenhet (s, min, h, d, y): \").strip()\n",
+    "    try:\n",
+    "        result, res_unit = convert_to_unit(val, target_unit)\n",
+    "        print(f\"{val} {unit} = {result:.2f} {res_unit}\")\n",
+    "    except Exception as e:\n",
+    "        print(\"Feil:\", e)\n",
+    "\n",
+    "def del_4_meny():\n",
+    "    print(\"\\nDel 4: Fart, forbruk og utslipp\")\n",
+    "    print(\"1. Regn ut km per liter (fra L/mil)\")\n",
+    "    print(\"2. Regn ut CO₂-utslipp per liter (fra g/km)\")\n",
+    "    print(\"3. Konverter knop til km/h\")\n",
+    "    print(\"4. Konverter km/h til knop\")\n",
+    "\n",
+    "    valg = input(\"Velg et alternativ (1-4): \")\n",
+    "\n",
+    "    if valg == '1':\n",
+    "        lpm = float(input(\"Oppgi forbruk i L/mil: \"))\n",
+    "        kmpl = diesel_forbruk_km_per_liter(lpm)\n",
+    "        print(f\"Bilen kjører {kmpl:.2f} km per liter diesel.\")\n",
+    "    elif valg == '2':\n",
+    "        gram_per_km = float(input(\"Oppgi CO₂-utslipp i gram per km: \"))\n",
+    "        kmpl = float(input(\"Oppgi bilens rekkevidde i km per liter: \"))\n",
+    "        utslipp = co2_utslipp_per_liter(kmpl, gram_per_km)\n",
+    "        print(f\"Bilen slipper ut {utslipp:.2f} kg CO₂ per liter diesel.\")\n",
+    "    elif valg == '3':\n",
+    "        knop = float(input(\"Oppgi farten i knop: \"))\n",
+    "        print(f\"{knop} knop = {knop_til_kmh(knop):.2f} km/h\")\n",
+    "    elif valg == '4':\n",
+    "        kmh = float(input(\"Oppgi farten i km/h: \"))\n",
+    "        print(f\"{kmh} km/h = {kmh_til_knop(kmh):.2f} knop\")\n",
+    "    else:\n",
+    "        print(\"Ugyldig valg.\")\n",
+    "\n",
+    "def del_5_meny():\n",
+    "    print(\"\\nDel 5: Medisinsk doseutregning\")\n",
+    "    masse, masse_enhet = input_value_with_unit(\"Oppgi kroppsmasse (f.eks. '70 kg'): \")\n",
+    "    dose_per_kg = float(input(\"Oppgi dose i mg per kg: \"))\n",
+    "    total_dose = medisinsk_dose(masse, dose_per_kg)\n",
+    "    print(f\"Total dose: {total_dose:.2f} mg\")\n",
+    "\n",
+    "# Hovedmeny\n",
+    "\n",
+    "def main():\n",
+    "    while True:\n",
+    "        print(\"\\nEnhetskonvertering og beregninger\")\n",
+    "        print(\"1. Konverter en verdi med prefiks\")\n",
+    "        print(\"2. Konverter tid\")\n",
+    "        print(\"3. Avslutt\")\n",
+    "        print(\"4. Fart og sammensatte enheter\")\n",
+    "        print(\"5. Tetthet og medisinens styrke\")\n",
+    "        print(\"6. Fysiske formler og enhetsberegninger\")\n",
+    "\n",
+    "        choice = input(\"Velg et alternativ (1-6): \")\n",
+    "\n",
+    "        if choice == '1':\n",
+    "            del_1_meny()\n",
+    "        elif choice == '2':\n",
+    "            del_2_meny()\n",
+    "        elif choice == '3':\n",
+    "            print(\"Avslutter programmet.\")\n",
+    "            break\n",
+    "        elif choice == '4':\n",
+    "            del_4_meny()\n",
+    "        elif choice == '5':\n",
+    "            del_5_meny()\n",
+    "        elif choice == '6':\n",
+    "            del_6_meny()\n",
+    "        else:\n",
+    "            print(\"Ugyldig valg. Prøv igjen.\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   },
   {
    "cell_type": "code",
@@ -2273,7 +2686,9 @@
   {
    "cell_type": "markdown",
    "id": "ece37b96-c6f7-4ec6-8d61-d09d53695aca",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# $\\color{green}{\\text{Kapittel 4 - Statistikk}}$"
    ]
@@ -2840,7 +3255,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
