--- a/Matematikk SR boka.ipynb
+++ b/Matematikk SR boka.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "39f701c3-a591-402d-a0e4-4626530bf12f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# $\\color{black}{\\text{Kapittel 1 - Grunnleggende regning/prosentregning/vekstfaktor}}$"
    ]
@@ -3974,9 +3976,7 @@
   {
    "cell_type": "markdown",
    "id": "f13aaa9f-c9ac-435d-8f77-818f4d1a0be1",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# $\\color{red}{\\text{Kapittel 5 - Yrkesøkonomi}}$"
    ]
@@ -4357,8 +4357,265 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "id": "9d63f790-49bb-493d-9c46-fe6daffc492f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Velg beregningstype:\n",
+      "1. Beregn besparelse ved redusert sykefravær\n",
+      "2. Beregn lønnsomhet ved investering i velferdsteknologi\n",
+      "3. Beregn besparelse og tilbakebetalingstid for elektronisk dørlås\n",
+      "4. Beregn besparelse og lønnsomhet for dusjtoaletter\n",
+      "5. Generell investering og besparelsesanalyse (f.eks. løfteheis)\n",
+      "Trykk 'q' for å avslutte.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ditt valg:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Generell investering – for eksempel løfteheis\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Antall enheter som skal kjøpes (f.eks. 2 løfteheiser):  2\n",
+      "Kostnad per enhet (kr):  60000\n",
+      "Forventet spart tid totalt per år (timer):  461.5\n",
+      "Vil du oppgi timelønn? (ja/nei):  ja\n",
+      "Skriv inn timelønn (kr):  340\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total investering: 120000.00 kr\n",
+      "Forventet årlig besparelse: 156910.00 kr\n",
+      "Netto resultat etter ett år: +36910.00 kr\n",
+      "Tilbakebetalingstid: 0.76 år\n",
+      "\n",
+      "Velg beregningstype:\n",
+      "1. Beregn besparelse ved redusert sykefravær\n",
+      "2. Beregn lønnsomhet ved investering i velferdsteknologi\n",
+      "3. Beregn besparelse og tilbakebetalingstid for elektronisk dørlås\n",
+      "4. Beregn besparelse og lønnsomhet for dusjtoaletter\n",
+      "5. Generell investering og besparelsesanalyse (f.eks. løfteheis)\n",
+      "Trykk 'q' for å avslutte.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ditt valg:  q\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avslutter programmet.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5 Yrkesøkonomi: 5.6 Velferdsteknologi\n",
+    "STANDARD_TIMELØNN = 340\n",
+    "\n",
+    "def spør_om_timelønn():\n",
+    "    svar = input(\"Vil du oppgi timelønn? (ja/nei): \").strip().lower()\n",
+    "    if svar == 'ja':\n",
+    "        return float(input(\"Skriv inn timelønn (kr): \"))\n",
+    "    else:\n",
+    "        print(f\"Standard timelønn brukes: {STANDARD_TIMELØNN} kr\")\n",
+    "        return STANDARD_TIMELØNN\n",
+    "\n",
+    "def beregn_sykefravær_besparelse(tidligere_prosent, ny_prosent, årsverk, timer_per_årsverk, timelønn):\n",
+    "    totale_timer = årsverk * timer_per_årsverk\n",
+    "    forskjell_i_prosent = (tidligere_prosent - ny_prosent) / 100\n",
+    "    sparte_timer = forskjell_i_prosent * totale_timer\n",
+    "    sparte_kroner = sparte_timer * timelønn\n",
+    "    return round(sparte_timer), round(sparte_kroner)\n",
+    "\n",
+    "def beregn_investering_lønnsomhet(antall_pasienter, kostnad_per_enhet, spart_tid_per_dag, årslønn, arbeidstimer_per_år):\n",
+    "    gjennomsnittlig_timelønn = årslønn / arbeidstimer_per_år\n",
+    "    total_spart_tid_per_år = (spart_tid_per_dag / 60) * 365 * antall_pasienter\n",
+    "    totale_besparelser_per_år = total_spart_tid_per_år * gjennomsnittlig_timelønn\n",
+    "    total_investering_kostnad = antall_pasienter * kostnad_per_enhet\n",
+    "    netto_besparelser = totale_besparelser_per_år - total_investering_kostnad\n",
+    "    return netto_besparelser\n",
+    "\n",
+    "def beregn_tid_og_kostnad(besøk_per_uke, minutter_spart_per_besøk, timelønn, låskostnad):\n",
+    "    besøk_per_år = besøk_per_uke * 52\n",
+    "    total_spart_tid_minutter = besøk_per_år * minutter_spart_per_besøk\n",
+    "    total_spart_tid_timer = total_spart_tid_minutter / 60\n",
+    "    spart_kroner = total_spart_tid_timer * timelønn\n",
+    "    netto_besparelse = spart_kroner - låskostnad\n",
+    "    return round(total_spart_tid_timer, 2), round(spart_kroner, 2), round(netto_besparelse, 2)\n",
+    "\n",
+    "def beregn_tilbakebetalingstid(besøk_per_uke, minutter_spart_per_besøk, timelønn, låskostnad):\n",
+    "    spart_per_uke = (minutter_spart_per_besøk / 60) * besøk_per_uke * timelønn\n",
+    "    if spart_per_uke == 0:\n",
+    "        return float('inf')\n",
+    "    return round(låskostnad / spart_per_uke)\n",
+    "\n",
+    "def beregn_dusjtoalett_besparelse(antall_beboere, andel_med_behov, minutter_spart_per_dag, dager_per_år):\n",
+    "    brukere_med_behov = antall_beboere * andel_med_behov\n",
+    "    timer_spart_per_dag = (minutter_spart_per_dag / 60) * brukere_med_behov\n",
+    "    timer_spart_per_år = timer_spart_per_dag * dager_per_år\n",
+    "    return round(timer_spart_per_år, 2)\n",
+    "\n",
+    "def beregn_tilbakebetalingstid_dusjtoalett(totalkostnad, timer_spart_per_år, timelønn):\n",
+    "    spart_kroner_per_år = timer_spart_per_år * timelønn\n",
+    "    if spart_kroner_per_år == 0:\n",
+    "        return float('inf'), 0\n",
+    "    år = totalkostnad / spart_kroner_per_år\n",
+    "    måneder = år * 12\n",
+    "    return round(måneder, 1), round(spart_kroner_per_år, 2)\n",
+    "\n",
+    "def maks_toaletter_for_nullresultat(spart_kroner_per_år, kostnad_per_toalett):\n",
+    "    if kostnad_per_toalett == 0:\n",
+    "        return float('inf')\n",
+    "    maks_toaletter = spart_kroner_per_år // kostnad_per_toalett\n",
+    "    return int(maks_toaletter)\n",
+    "\n",
+    "def beregn_generell_investering(antall_enheter, kostnad_per_enhet, spart_timer_per_år, timelønn):\n",
+    "    investering = antall_enheter * kostnad_per_enhet\n",
+    "    besparelse = spart_timer_per_år * timelønn\n",
+    "    netto = besparelse - investering\n",
+    "    tilbakebetalingstid = investering / besparelse if besparelse > 0 else float('inf')\n",
+    "    return investering, besparelse, netto, tilbakebetalingstid\n",
+    "\n",
+    "def hovedprogram():\n",
+    "    while True:\n",
+    "        print(\"\\nVelg beregningstype:\")\n",
+    "        print(\"1. Beregn besparelse ved redusert sykefravær\")\n",
+    "        print(\"2. Beregn lønnsomhet ved investering i velferdsteknologi\")\n",
+    "        print(\"3. Beregn besparelse og tilbakebetalingstid for elektronisk dørlås\")\n",
+    "        print(\"4. Beregn besparelse og lønnsomhet for dusjtoaletter\")\n",
+    "        print(\"5. Generell investering og besparelsesanalyse (f.eks. løfteheis)\")\n",
+    "        print(\"Trykk 'q' for å avslutte.\")\n",
+    "        valg = input(\"Ditt valg: \")\n",
+    "\n",
+    "        if valg == 'q':\n",
+    "            print(\"Avslutter programmet.\")\n",
+    "            break\n",
+    "\n",
+    "        elif valg == '1':\n",
+    "            tidligere_prosent = float(input(\"Tidligere sykefraværsprosent: \"))\n",
+    "            ny_prosent = float(input(\"Ny sykefraværsprosent: \"))\n",
+    "            årsverk = int(input(\"Antall årsverk: \"))\n",
+    "            timer_per_årsverk = int(input(\"Timer per årsverk: \"))\n",
+    "            timelønn = spør_om_timelønn()\n",
+    "\n",
+    "            sparte_timer, sparte_kroner = beregn_sykefravær_besparelse(\n",
+    "                tidligere_prosent, ny_prosent, årsverk, timer_per_årsverk, timelønn\n",
+    "            )\n",
+    "            print(f\"\\nSparte timer per år: {sparte_timer}\")\n",
+    "            print(f\"Sparte kroner per år: {sparte_kroner} kr\")\n",
+    "\n",
+    "        elif valg == '2':\n",
+    "            antall_pasienter = int(input(\"Antall pasienter: \"))\n",
+    "            kostnad_per_enhet = float(input(\"Kostnad per enhet (kr): \"))\n",
+    "            spart_tid_per_dag = float(input(\"Spart tid per dag per pasient (minutter): \"))\n",
+    "            årslønn = float(input(\"Årslønn per ansatt (kr): \"))\n",
+    "            arbeidstimer_per_år = float(input(\"Antall arbeidstimer per år: \"))\n",
+    "\n",
+    "            netto_besparelser = beregn_investering_lønnsomhet(\n",
+    "                antall_pasienter, kostnad_per_enhet, spart_tid_per_dag, årslønn, arbeidstimer_per_år\n",
+    "            )\n",
+    "\n",
+    "            if netto_besparelser > 0:\n",
+    "                print(f\"\\nInvesteringen er lønnsom. Netto besparelser i løpet av ett år: {netto_besparelser:.2f} kr\")\n",
+    "            else:\n",
+    "                print(f\"\\nInvesteringen er ikke lønnsom. Netto tap i løpet av ett år: {abs(netto_besparelser):.2f} kr\")\n",
+    "\n",
+    "        elif valg == '3':\n",
+    "            besøk_per_uke = int(input(\"Antall ukentlige besøk: \"))\n",
+    "            minutter_spart_per_besøk = float(input(\"Tid spart per besøk (minutter): \"))\n",
+    "            timelønn = spør_om_timelønn()\n",
+    "            låskostnad = float(input(\"Kostnad for elektronisk dørlås (kr): \"))\n",
+    "\n",
+    "            timer_spart, kroner_spart, netto = beregn_tid_og_kostnad(\n",
+    "                besøk_per_uke, minutter_spart_per_besøk, timelønn, låskostnad\n",
+    "            )\n",
+    "            uker_tilbakebetaling = beregn_tilbakebetalingstid(\n",
+    "                besøk_per_uke, minutter_spart_per_besøk, timelønn, låskostnad\n",
+    "            )\n",
+    "\n",
+    "            print(f\"\\nÅrlig spart tid: {timer_spart} timer\")\n",
+    "            print(f\"Årlig spart beløp: {kroner_spart:.2f} kr\")\n",
+    "            print(f\"Netto besparelse første år (etter låskostnad): {netto:.2f} kr\")\n",
+    "            print(f\"Antall uker før investeringen er spart inn: {uker_tilbakebetaling} uker\")\n",
+    "\n",
+    "        elif valg == '4':\n",
+    "            antall_beboere = int(input(\"Antall beboere: \"))\n",
+    "            andel_med_behov = float(input(\"Andel med behov (f.eks. 0.6 for 60%): \"))\n",
+    "            minutter_spart_per_dag = float(input(\"Minutter spart per dag per bruker: \"))\n",
+    "            dager_per_år = 365\n",
+    "            antall_toaletter = int(input(\"Antall toaletter som skal byttes: \"))\n",
+    "            kostnad_per_toalett = float(input(\"Kostnad per dusjtoalett (kr): \"))\n",
+    "            timelønn = spør_om_timelønn()\n",
+    "\n",
+    "            timer_spart_per_år = beregn_dusjtoalett_besparelse(\n",
+    "                antall_beboere, andel_med_behov, minutter_spart_per_dag, dager_per_år\n",
+    "            )\n",
+    "            totalkostnad = antall_toaletter * kostnad_per_toalett\n",
+    "            måneder, spart_kroner_per_år = beregn_tilbakebetalingstid_dusjtoalett(\n",
+    "                totalkostnad, timer_spart_per_år, timelønn\n",
+    "            )\n",
+    "            maks_toaletter = maks_toaletter_for_nullresultat(spart_kroner_per_år, kostnad_per_toalett)\n",
+    "\n",
+    "            print(f\"\\nÅrlig spart tid: {timer_spart_per_år} timer\")\n",
+    "            print(f\"Årlig spart beløp: {spart_kroner_per_år:.2f} kr\")\n",
+    "            print(f\"Tid før investeringen er spart inn: {måneder} måneder\")\n",
+    "            print(f\"Maksimalt antall toaletter som kan kjøpes for å gå i null på ett år: {maks_toaletter}\")\n",
+    "\n",
+    "        elif valg == '5':\n",
+    "            print(\"\\nGenerell investering – for eksempel løfteheis\")\n",
+    "\n",
+    "            antall_enheter = int(input(\"Antall enheter som skal kjøpes (f.eks. 2 løfteheiser): \"))\n",
+    "            kostnad_per_enhet = float(input(\"Kostnad per enhet (kr): \"))\n",
+    "            spart_timer_per_år = float(input(\"Forventet spart tid totalt per år (timer): \"))\n",
+    "            timelønn = spør_om_timelønn()\n",
+    "\n",
+    "            investering, besparelse, netto, tilbakebetalingstid = beregn_generell_investering(\n",
+    "                antall_enheter, kostnad_per_enhet, spart_timer_per_år, timelønn\n",
+    "            )\n",
+    "\n",
+    "            print(f\"\\nTotal investering: {investering:.2f} kr\")\n",
+    "            print(f\"Forventet årlig besparelse: {besparelse:.2f} kr\")\n",
+    "            print(f\"Netto resultat etter ett år: {'+' if netto >= 0 else ''}{netto:.2f} kr\")\n",
+    "            print(f\"Tilbakebetalingstid: {tilbakebetalingstid:.2f} år\")\n",
+    "\n",
+    "        else:\n",
+    "            print(\"Ugyldig valg. Prøv igjen.\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    hovedprogram()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "65d7c5b6-dacc-4555-89b1-38f075d66413",
+   "id": "95f35b1e-1d82-4548-afaa-652fba4dee68",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4366,31 +4623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10b4302c-c96d-4e23-af7b-7fa5715b27f7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9da0914-7d4f-4cbb-8c7b-98d6e4c60e59",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64681d65-5b93-482b-8c49-d3205a5ebb62",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acfebb05-1d4a-434a-8cb4-0014100b10eb",
+   "id": "868c0058-3e73-4904-bf0a-36e6eddbd2a0",
    "metadata": {},
    "outputs": [],
    "source": []
